--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <ul id="nav">
-  <a href="/index.html#main"><img id="nav_logo" src="/res/logo.svg"/></a>
+  <a href="/index.html#main"><img id="nav_logo" src="/res/logo.png"/></a>
   <a href="/index.html#main"><div class="nav_title">
       <p id="nav_name"><b>Arc One</b></p>
     </div></a>
